Fixes small logo squashing

--- a/src/App.css
+++ b/src/App.css
@@ -415,7 +415,9 @@ main {
 }
 
 .LOGOsmall {
+  display: none;
   max-width: 190px;
+  min-width: 70px;
   color: #f35626;
   background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
   -webkit-background-clip: text;
@@ -423,7 +425,21 @@ main {
   -webkit-animation: hue 4s infinite linear;
 }
 
+@media (min-width: 600px) {
+  .LOGOsmall {
+    display: block;
+    max-width: 190px;
+    min-width: 70px;
+    color: #f35626;
+    background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-animation: hue 4s infinite linear;
+  }
+}
+
 .maintitle-div {
+  width: 200px;
   margin-top: -10px;
   margin-bottom: -10px;
 }
@@ -503,8 +519,6 @@ main {
 
 /* ----SKILLSELECT--------SKILL SELECT------SKILL SELECT-----------SSSSSKKK-----------SSSKKKKKKKKK--------------------------------------- */
 
-
-
 .your-daily {
   font-size: 5rem;
   margin-bottom: 15px;
@@ -555,13 +569,13 @@ main {
 
 .skilllist-div {
   display: flex;
-  background: transparent; 
+  background: transparent;
   border: 1px solid rgb(0, 206, 178);
   border-radius: 15px;
   margin: 10px;
 }
 
-.skilllist-div:hover  {
+.skilllist-div:hover {
   transform: scale(1.1);
   transition: all ease 150ms;
 }
@@ -579,7 +593,6 @@ main {
   height: 38px;
   padding-left: 1rem;
   padding-right: 1rem;
-
 }
 
 .hourselect {
@@ -601,36 +614,32 @@ main {
   font-size: 2rem;
   font-weight: 700;
   /* display: block; */
-
 }
 
-input[type=text] {
+input[type="text"] {
   width: 350px;
-
 }
 
-input[type='checkbox'] {
-    -webkit-appearance:none;
-    width:25px;
-    height:25px;
-    background:rgb(255, 255, 255);
-    border-radius:15px;
-    border:2px solid rgb(0, 0, 0);
-    outline: none;
-    margin-top: 10px;
-    cursor: pointer;
+input[type="checkbox"] {
+  -webkit-appearance: none;
+  width: 25px;
+  height: 25px;
+  background: rgb(255, 255, 255);
+  border-radius: 15px;
+  border: 2px solid rgb(0, 0, 0);
+  outline: none;
+  margin-top: 10px;
+  cursor: pointer;
 }
-input[type='checkbox']:checked {
-    background: rgb(179, 255, 0);
-    outline: none;
-    cursor: pointer;
-    border:4px solid rgb(0, 0, 0);
-
+input[type="checkbox"]:checked {
+  background: rgb(179, 255, 0);
+  outline: none;
+  cursor: pointer;
+  border: 4px solid rgb(0, 0, 0);
 }
 
 .skill-routine-table {
   cursor: default;
-
 }
 
 .skillsubmit {
@@ -642,19 +651,21 @@ input[type='checkbox']:checked {
   width: 13%;
   height: 8%;
   border-radius: 15px;
-  padding: -5px; 
+  padding: -5px;
 }
 
 .hardsmash {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: .6rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 0.6rem;
   color: rgb(133, 54, 54);
   font-weight: 700;
   margin: 10px;
 }
 .easysmash {
-   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: .6rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 0.6rem;
   color: rgb(133, 133, 133);
   font-weight: 700;
   margin: 10px;
@@ -662,7 +673,6 @@ input[type='checkbox']:checked {
 
 .skillsmash {
   padding: px;
-
 }
 
 .skillform-titles {
@@ -709,7 +719,6 @@ input[type='checkbox']:checked {
 
 .journal-form {
   margin-bottom: 100px;
-
 }
 
 .skillday-info {
@@ -743,15 +752,14 @@ input[type='checkbox']:checked {
   margin-left: 10px;
   color: rgb(21, 228, 176);
   font-weight: 700;
-
 }
 
-
 .skilltarget {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: rgb(66, 66, 66);
   font-weight: 700;
-  font-size: .7rem;
+  font-size: 0.7rem;
   border: 1px solid;
   padding: 4px;
 }
@@ -759,7 +767,6 @@ input[type='checkbox']:checked {
 .skilltarget:hover {
   color: white;
 }
-
 
 .days {
   font-size: 285%;
@@ -777,12 +784,11 @@ input[type='checkbox']:checked {
   justify-content: space-evenly;
   margin-top: -1%;
   margin-bottom: 4%;
- 
 }
 
 .addroutine {
   margin-bottom: 20px;
-   animation: pulse 1.5s infinite;
+  animation: pulse 1.5s infinite;
   animation-timing-function: linear;
 }
 
@@ -829,8 +835,9 @@ input[type='checkbox']:checked {
 }
 
 .target {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: .8rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 0.8rem;
   color: rgb(36, 149, 255);
   font-weight: 700;
   padding: 5px;
